quelea (2014.1) stable; urgency=normal
 
  * Added remote control functionality
  * Added Youtube support
  * Added DVD / Bluray support
  * Added ability to import more than one presentation at a time
  * Added ZionWorx import
  * Added Easyworship import
  * Added Openlyrics import / export
  * Added song translation support
  * Improved text wrapping algorithm for bible text
  * Added option for displaying verse numbers in bible text
  * Added Hungarian translation
  * Added additional options for specifying the notice colour, speed, font, size and position
  * Bugfix - italic font property now saved when selecting an image or video background
  * Bugfix - no longer possible to add empty bible passages
  * Bugfix - quick edit cursor doesn't show on bible passages anymore
  * Bugfix - bible search now filters out duplicate results correctly
  * Bugfix - long notices now behave correctly
  * Bugfix - printing now works properly for songs and schedules
  * Various other minor bug fixes

 -- Michael Berry <michael@quelea.org>  Wednesday, 22 Aug 2014 00:00:00 +0000